@@ -5,7 +5,6 @@
 #include <boost/python.hpp>
 #include <libtorrent/create_torrent.hpp>
 #include <libtorrent/file_storage.hpp>
-#include "libtorrent/intrusive_ptr_base.hpp"
 #include "libtorrent/torrent_info.hpp"
 
 using namespace boost::python;
